share/group을 calendar에 넣기 위한 작업